# map-generator

./: .gitignore  Cargo.toml  README.md  compile.bat
gui/: change_color.py  constants.py  edit_menu.py  edit_requests.py  generation_menu.py  initial_menu.py  initial_tab.py  legend.py  main.py  menu_bar.py  new_view_menu.py  refactor_idea.py  reorder.py  requirements.txt  view_menu.py  viewer.py  world_tab.py
gui/colors/: atlas.json  atlas_dark_water.json  colorful.json  grayscale.json  green_blue_black.json  wikipedia.json
gui/templates/: atlas_height.json  climate.json  old_azimuthal.json  old_equirectangular.json  othographic_height.json  precipitation.json  satellite_image.json
src/: complete_map.rs  configuration.rs  draw_functions.rs  loaded_maps.rs  main.rs  main_rest_api.rs  map_pipeline.rs  partial_map.rs  recipe.rs
src/map_view/: color_scheme.rs  contour_layer.rs  custom_partial_map_layer.rs  layer.rs  map_view.rs  mod.rs  mountain_img_layer.rs  parallels_meridians_layer.rs  partial_map_layer.rs  relief_shadow.rs  rhumb_lines.rs  rivers_layer.rs  satellite.rs  shadow_layer.rs  texture_layer.rs  tree_img_layer.rs  util.rs  view_config.rs  wind_layer.rs
src/pipeline_steps/: adjust_percentiles.rs  annual_precipitation.rs  calculate_climate.rs  climate.rs  continentality.rs  define_coastlines.rs  diamond_square.rs  gradient_winds.rs  height_in_plates.rs  height_noise.rs  height_noise_mult.rs  height_noise_poles.rs  hidraulic_erosion0.rs  hotspots.rs  hydraulic_erosion.rs  hydraulic_field_erosion.rs  ice.rs  load_custom_layer.rs  load_height.rs  mod.rs  (+18 more)
(+17 files in other folders)
